--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -45,18 +45,36 @@
           color: $whiteColor;
           border: 2px solid $whiteColor;
           border-radius: 50%;
-          text-transform: capitalize;
           padding: 4px;
           margin: 0 4px;
           transition: all 0.4s ease;
-          &:hover {
-            background-color: $whiteColor;
-          }
+          position: relative;
+          overflow: hidden;
           &:first-child {
             margin-left: 0;
           }
           &:last-child {
             margin-right: 0;
+          }
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            transition: all 0.4s ease;
+            box-shadow: inset 0 0 0 0 $whiteColor;
+          }
+          &:hover {
+            background-color: $whiteColor;
+            &::before {
+              box-shadow: inset 0 0 0 32px $whiteColor;
+            }
+            i,
+            svg {
+              z-index: 1;
+            }
           }
           @media (min-width: 992px) {
             width: 32px;
