Client Testimonial Section Added

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -14,7 +14,7 @@ $themeTextDark: #2e3235;
 $themeTextGrey1: #889198;
 $themeTextGrey2: #6f7a82;
 $themeTextGrey3: #5e707d;
-$themeTextYellow: #ffe221;
+$themeTextHighlight: #01efd9;
 
 $themeBackground1: #f6f6f6;
 $themeBackground2: #f8f9fb;
