--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1563,7 +1563,7 @@ a {
 }
 
 .banner .inner-banner .banner-content .banner-title .banner-text:last-child {
-  color: #ffe221;
+  color: #01efd9;
   -webkit-animation-delay: 0.5s;
        -o-animation-delay: 0.5s;
           animation-delay: 0.5s;
@@ -1693,8 +1693,8 @@ a {
 }
 
 .services .services-card .card-overlay {
-  width: 160px;
-  height: 160px;
+  width: 130px;
+  height: 130px;
   position: absolute;
   border-radius: 50%;
   background: #00aeef;
@@ -1715,8 +1715,8 @@ a {
 .services .services-card .icon-wrap {
   margin: auto;
   margin-bottom: 40px;
-  width: 190px;
-  height: 190px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
   background: #fff;
   border: 2px solid #00aeef;
@@ -1741,8 +1741,8 @@ a {
 
 .services .services-card .icon-wrap::after {
   content: "";
-  width: 160px;
-  height: 160px;
+  width: 130px;
+  height: 130px;
   display: block;
   position: absolute;
   background: #00aeef;
@@ -1759,8 +1759,8 @@ a {
 }
 
 .services .services-card .icon-wrap svg {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   fill: #ffffff;
   -webkit-transition: all 0.4s ease-out;
   -o-transition: all 0.4s ease-out;
@@ -1862,6 +1862,190 @@ a {
       -ms-transform: scaleX(1);
        -o-transform: scaleX(1);
           transform: scaleX(1);
+}
+
+.client-testimonial {
+  padding: 50px 0 50px;
+}
+
+@media (min-width: 992px) {
+  .client-testimonial {
+    padding: 100px 0 100px;
+  }
+}
+
+.client-testimonial .slider-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 767px) {
+  .client-testimonial .slider-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.client-testimonial .slider-wrapper .user-image {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .client-testimonial .slider-wrapper .user-image {
+    width: 40%;
+  }
+}
+
+.client-testimonial .slider-wrapper .user-image .image-slide {
+  height: 100%;
+}
+
+.client-testimonial .slider-wrapper .user-image .image-slide .swiper-wrapper {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.client-testimonial .slider-wrapper .user-image .image-slide .swiper-slide {
+  background-position: center;
+  -webkit-background-size: cover;
+          background-size: cover;
+  width: 250px;
+  height: 330px;
+}
+
+.client-testimonial .slider-wrapper .user-image .image-slide .swiper-slide img {
+  -webkit-filter: contrast(0.5) blur(1px);
+          filter: contrast(0.5) blur(1px);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
+.client-testimonial .slider-wrapper .user-image .image-slide .swiper-slide-active img {
+  -webkit-filter: contrast(1) blur(0px) !important;
+          filter: contrast(1) blur(0px) !important;
+}
+
+.client-testimonial .slider-wrapper .user-review {
+  background: #00aeef;
+  width: 100%;
+  color: #fff;
+  height: 100%;
+  border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+  .client-testimonial .slider-wrapper .user-review {
+    width: 60%;
+  }
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide {
+  height: 80vh;
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide .quote {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (max-width: 767px) {
+  .client-testimonial .slider-wrapper .user-review .review-slide .quote {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+
+@media (min-width: 576px) {
+  .client-testimonial .slider-wrapper .user-review .review-slide .quote {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+@media (min-width: 992px) {
+  .client-testimonial .slider-wrapper .user-review .review-slide .quote {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .client-testimonial .slider-wrapper .user-review .review-slide .quote {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide .quote .quote-icon {
+  width: 38px;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide .quote p {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.8;
+  font-style: italic;
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide .quote .name {
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 0.04em;
+  line-height: 35px;
+  text-align: left;
+}
+
+.client-testimonial .slider-wrapper .user-review .review-slide .quote .designation {
+  font-size: 14px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #fff;
+  opacity: 0.65;
+}
+
+@media (max-width: 767px) {
+  .client-testimonial .slider-wrapper .user-review .review-slide .swiper-pagination {
+    top: 100%;
+    -webkit-transform: translate(10px, -80px) rotate(-90deg);
+        -ms-transform: translate(10px, -80px) rotate(-90deg);
+         -o-transform: translate(10px, -80px) rotate(-90deg);
+            transform: translate(10px, -80px) rotate(-90deg);
+    right: 50%;
+  }
 }
 
 .footer {
