--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -74,7 +74,7 @@
             animation-delay: 0.7s;
           }
           &:last-child {
-            color: $themeTextYellow;
+            color: $themeTextHighlight;
             animation-delay: 0.5s;
           }
           @media (min-width: 576px) {
@@ -162,8 +162,8 @@
     max-width: 100%;
     margin: auto;
     .card-overlay {
-      width: 160px;
-      height: 160px;
+      width: 130px;
+      height: 130px;
       position: absolute;
       border-radius: 50%;
       background: $themePrimary;
@@ -176,8 +176,8 @@
     .icon-wrap {
       margin: auto;
       margin-bottom: 40px;
-      width: 190px;
-      height: 190px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       background: #fff;
       border: 2px solid $themePrimary;
@@ -189,8 +189,8 @@
       transition: all 0.4s ease-out;
       &::after {
         content: "";
-        width: 160px;
-        height: 160px;
+        width: 130px;
+        height: 130px;
         display: block;
         position: absolute;
         background: $themePrimary;
@@ -201,8 +201,8 @@
         transition: opacity 0.4s ease-out;
       }
       svg {
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         fill: $whiteColor;
         transition: all 0.4s ease-out;
         z-index: 9;
@@ -279,3 +279,123 @@
   }
 }
 // Services End
+
+// Client Slider Start
+.client-testimonial {
+  padding: 50px 0 50px;
+  @media (min-width: 992px) {
+    padding: 100px 0 100px;
+  }
+  .slider-wrapper {
+    display: flex;
+    @media (max-width: 767px) {
+      flex-direction: column;
+      align-items: center;
+    }
+    .user-image {
+      width: 100%;
+      @media (min-width: 768px) {
+        width: 40%;
+      }
+      .image-slide {
+        height: 100%;
+        .swiper-wrapper {
+          align-items: center;
+        }
+        .swiper-slide {
+          background-position: center;
+          background-size: cover;
+          width: 250px;
+          height: 330px;
+          img {
+            filter: contrast(0.5) blur(1px);
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+          }
+        }
+        .swiper-slide-active img {
+          filter: contrast(1) blur(0px) !important;
+        }
+      }
+    }
+    .user-review {
+      background: $themePrimary;
+      width: 100%;
+      color: #fff;
+      height: 100%;
+      border-radius: 10px;
+      @media (min-width: 768px) {
+        width: 60%;
+      }
+      .review-slide {
+        height: 80vh;
+        .quote {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding-left: 15px;
+          padding-right: 15px;
+          @media (max-width: 767px) {
+            align-items: center;
+            text-align: center;
+          }
+          @media (min-width: 576px) {
+            padding-left: 40px;
+            padding-right: 40px;
+          }
+          @media (min-width: 992px) {
+            padding-left: 70px;
+            padding-right: 70px;
+          }
+          @media (min-width: 1200px) {
+            padding-left: 100px;
+            padding-right: 100px;
+          }
+          .quote-icon {
+            width: 38px;
+            display: block;
+            margin-bottom: 30px;
+          }
+          // p {
+          //   font-size: 28px;
+          //   letter-spacing: 0.02em;
+          //   line-height: 35px;
+          // }
+          p {
+            font-size: 20px;
+            font-weight: 300;
+            line-height: 1.8;
+            font-style: italic;
+            // margin: 0;
+          }
+          .name {
+            font-weight: bold;
+            font-size: 18px;
+            letter-spacing: 0.04em;
+            line-height: 35px;
+            text-align: left;
+          }
+          .designation {
+            font-size: 14px;
+            letter-spacing: 0.04em;
+            text-align: left;
+            color: #fff;
+            opacity: 0.65;
+          }
+        }
+        .swiper-pagination {
+          @media (max-width: 767px) {
+            top: 100%;
+            transform: translate(10px, -80px) rotate(-90deg);
+            right: 50%;
+          }
+        }
+      }
+    }
+  }
+}
+// Client Slider End
