--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -330,7 +330,10 @@
         width: 60%;
       }
       .review-slide {
-        height: 80vh;
+        height: 65vh;
+        @media (min-width: 768px) {
+          height: 80vh;
+        }
         .quote {
           width: 100%;
           height: 100%;
@@ -360,17 +363,11 @@
             display: block;
             margin-bottom: 30px;
           }
-          // p {
-          //   font-size: 28px;
-          //   letter-spacing: 0.02em;
-          //   line-height: 35px;
-          // }
           p {
             font-size: 20px;
             font-weight: 300;
             line-height: 1.8;
             font-style: italic;
-            // margin: 0;
           }
           .name {
             font-weight: bold;
@@ -385,13 +382,6 @@
             text-align: left;
             color: #fff;
             opacity: 0.65;
-          }
-        }
-        .swiper-pagination {
-          @media (max-width: 767px) {
-            top: 100%;
-            transform: translate(10px, -80px) rotate(-90deg);
-            right: 50%;
           }
         }
       }
