--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -330,7 +330,7 @@
         width: 60%;
       }
       .review-slide {
-        height: 500px;
+        height: 65vh;
         @media (min-width: 768px) {
           height: 80vh;
         }
