--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -389,3 +389,136 @@
   }
 }
 // Client Slider End
+
+// Our Team Start
+.our-team {
+  padding: 50px 0 50px;
+  background-color: $themeBackground2;
+  @media (min-width: 992px) {
+    padding: 100px 0 100px;
+  }
+
+  .team-cards {
+    width: 400px;
+    height: 400px;
+    max-width: 100%;
+    display: block;
+    background-size: cover;
+    border-radius: 15px;
+    position: relative;
+    overflow: hidden;
+    background-position: center;
+    margin: auto;
+    z-index: 3;
+    .cards-rect {
+      background: #fff;
+      width: 200px;
+      height: 110px;
+      transform: skewX(-20deg);
+      display: block;
+      position: absolute;
+      top: 73%;
+      opacity: 0.9;
+      left: -100%;
+      z-index: 2;
+      transition: all 0.5s ease-in;
+      p {
+        font-size: 20px;
+        color: #fff;
+        transform: skewX(20deg);
+        line-height: 6rem;
+      }
+      .card-shadow {
+        background: $themePrimary;
+        width: 230px;
+        height: 100px;
+        display: block;
+        position: absolute;
+        left: -200%;
+        z-index: -1;
+        transition: all 0.3s ease-in;
+      }
+    }
+    .cards-circle {
+      width: 240px;
+      height: 240px;
+      border-radius: 50%;
+      background: #fff;
+      position: absolute;
+      top: -20%;
+      left: 50%;
+      opacity: 0.9;
+      transform: scale(0);
+      transition: all 0.3s ease;
+      &:before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: $themePrimary;
+        border-radius: 50%;
+        transform: scale(0);
+        transition: all 0.3s ease;
+        transition-delay: 0.2s;
+      }
+    }
+    .cards-list {
+      list-style: none;
+      position: absolute;
+      top: -9px;
+      right: 7px;
+      padding-top: 60px;
+      transition: all 0.4s ease;
+      li {
+        display: inline-block;
+        margin: 4px;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        background: lighten($color: $whiteColor, $amount: 10);
+        text-align: center;
+        line-height: 1.7rem;
+        font-size: 12px;
+        transition: all 0.3s ease;
+        transform: translateX(500%);
+        a {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+          color: $themePrimary;
+        }
+        &:nth-child(1) {
+          transition-delay: 0.2s;
+        }
+        &:nth-child(2) {
+          transition-delay: 0.3s;
+        }
+        &:nth-child(3) {
+          transition-delay: 0.4s;
+        }
+      }
+    }
+    &:hover {
+      .cards-rect {
+        left: 10%;
+        .card-shadow {
+          left: -20%;
+        }
+      }
+      .cards-circle {
+        transform: scale(1);
+        &:before {
+          transform: scale(0.9);
+        }
+      }
+      .cards-list {
+        li {
+          transform: translateX(0);
+        }
+      }
+    }
+  }
+}
+// Our Team End
