--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -84,3 +84,81 @@
   }
 }
 // Section Title End
+
+// Social Icons Start
+.social-icons {
+  display: flex;
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    font-size: 12px;
+    color: $whiteColor;
+    border: 2px solid $whiteColor;
+    border-radius: 50%;
+    padding: 4px;
+    margin: 0 4px;
+    transition: all 0.4s ease;
+    position: relative;
+    overflow: hidden;
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      transition: all 0.4s ease;
+      box-shadow: inset 0 0 0 0 $whiteColor;
+    }
+    &:hover {
+      background-color: $whiteColor;
+      &::before {
+        box-shadow: inset 0 0 0 32px $whiteColor;
+      }
+      i,
+      svg {
+        z-index: 1;
+      }
+    }
+    @media (min-width: 992px) {
+      width: 32px;
+      height: 32px;
+      font-size: 14px;
+      margin: 0 6px;
+    }
+  }
+  .facebook {
+    &:hover {
+      color: #3b5998;
+    }
+  }
+  .instagram {
+    svg {
+      width: 16px;
+      height: 16px;
+      stop {
+        transition: all 0.4s ease;
+      }
+    }
+  }
+  .twitter {
+    &:hover {
+      color: #00acee;
+    }
+  }
+  .linkedin {
+    &:hover {
+      color: #0077b5;
+    }
+  }
+}
+// Social Icons End
