--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -34,67 +34,10 @@
       font-size: 14px;
 
       .social-icons {
-        display: flex;
-        a {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 24px;
-          height: 24px;
-          font-size: 12px;
-          color: $whiteColor;
-          border: 2px solid $whiteColor;
-          border-radius: 50%;
-          padding: 4px;
-          margin: 0 4px;
-          transition: all 0.4s ease;
-          position: relative;
-          overflow: hidden;
-          &:first-child {
-            margin-left: 0;
-          }
-          &:last-child {
-            margin-right: 0;
-          }
-          &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            transition: all 0.4s ease;
-            box-shadow: inset 0 0 0 0 $whiteColor;
-          }
-          &:hover {
-            background-color: $whiteColor;
-            &::before {
-              box-shadow: inset 0 0 0 32px $whiteColor;
-            }
-            i,
-            svg {
-              z-index: 1;
-            }
-          }
-          @media (min-width: 992px) {
-            width: 32px;
-            height: 32px;
-            font-size: 14px;
-            margin: 0 6px;
-          }
-        }
-        a.facebook {
-          &:hover {
-            color: #3b5998;
-          }
-        }
-        a.instagram {
+        .instagram {
           svg {
-            width: 16px;
-            height: 16px;
             stop {
               stop-color: $whiteColor;
-              transition: all 0.4s ease;
             }
           }
           &:hover {
@@ -109,16 +52,6 @@
                 stop-color: #8c3aaa;
               }
             }
-          }
-        }
-        a.twitter {
-          &:hover {
-            color: #00acee;
-          }
-        }
-        a.linkedin {
-          &:hover {
-            color: #0077b5;
           }
         }
       }
