--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -280,9 +280,43 @@
 }
 // Services End
 
+// Project Showcase Start
+.project-showcase {
+  width: 100%;
+  height: 80vh;
+  background-color: $themePrimary;
+  overflow: hidden;
+  .swiper-container{
+    .swiper-wrapper{
+      .swiper-slide{
+        .project-wrap{
+          display: flex;
+          // justify-content: space-between;
+          align-items: stretch;
+          height: 100%;
+          .content-wrap{
+            width: 50%;
+            height: 100%;
+          }
+          .image-wrap{
+            // height: 100%;
+            width: 50%;
+            img{
+              height: 80vh;
+              object-fit: contain;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+// Project Showcase End
+
 // Client Slider Start
 .client-testimonial {
   padding: 50px 0 50px;
+  background-color: $themeBackground2;
   @media (min-width: 992px) {
     padding: 100px 0 100px;
   }
@@ -393,7 +427,7 @@
 // Our Team Start
 .our-team {
   padding: 50px 0 50px;
-  background-color: $themeBackground2;
+  // background-color: $themeBackground2;
   @media (min-width: 992px) {
     padding: 100px 0 100px;
   }
